chore(content design): fix the content to max width at 750 for readable line length.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -232,3 +232,9 @@ p {
 .text-shadow {
     text-shadow: 0px -1px 0px rgba(0, 0, 0, .2);
 }
+
+.content {
+    @apply mx-auto mb-10;
+    max-width: 92%;
+    width: 750px;
+}
